Create modal dialog for template editing, support external configuration
Support converted templates save to target directory

--- a/src/public/js/components/TemplatesList/template_list_preview.css
+++ b/src/public/js/components/TemplatesList/template_list_preview.css
@@ -2,9 +2,21 @@
 	display: flex;
 }
 
+.templates-title {
+	font-size: 20px;
+	padding: 10px;
+	text-align: right;
+}
+
 .templates-preview .templates-preview-container {
 	width: 100%;
 	max-width: 50%;
+}
+
+.template-convert-error {
+	font-size: 18px;
+	color: red;
+	text-align: center;
 }
 
 .templates-loading {
