--- a/src/public/js/components/TemplatesList/template_list_preview.css
+++ b/src/public/js/components/TemplatesList/template_list_preview.css
@@ -4,7 +4,6 @@
 
 .templates-title {
 	font-size: 20px;
-	text-align: right;
 	position: fixed;
 	left: 0;
 	top: 0;
@@ -15,8 +14,11 @@
 	border-bottom: 1px solid #eee;
 }
 
-.templates-title .templates-number {
+.templates-title .templates-header {
 	margin: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .templates-body {
