--- a/src/public/js/components/TemplatesList/template_list_preview.css
+++ b/src/public/js/components/TemplatesList/template_list_preview.css
@@ -16,9 +16,9 @@
 
 .templates-title .templates-header {
 	margin: 10px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
 }
 
 .templates-body {
@@ -38,9 +38,9 @@
 
 .templates-loading {
 	padding: 10px;
-    text-align: center;
-    font-size: 24px;
-    vertical-align: middle;
-    background: darkgray;
-    margin: 5px 0px;
+	text-align: center;
+	font-size: 24px;
+	vertical-align: middle;
+	background: darkgray;
+	margin: 5px 0;
 }
