--- a/src/public/js/components/TemplatesList/template_modal.css
+++ b/src/public/js/components/TemplatesList/template_modal.css
@@ -1,17 +1,17 @@
 .template-modal {
 	top: 30%;
-    left: 50%;
-    bottom: 20%;
-    width: 90%;
-    max-width: 800px;
-    transform: translate(-50%, -50%);
-    background: black;
-    position: absolute;
+	left: 50%;
+	bottom: 20%;
+	width: 90%;
+	max-width: 800px;
+	transform: translate(-50%, -50%);
+	background: black;
+	position: absolute;
 	padding: 10px;
 }
 
 .template-modal .template-header {
-	margin: 0px 0px 8px;
+	margin: 0 0 8px;
 }
 
 .template-modal .template-header .template-name {
@@ -20,9 +20,9 @@
 
 .template-modal .template-header .close-button {
 	font-size: 26px;
-    position: absolute;
-    right: 5px;
-    top: 2px;
+	position: absolute;
+	right: 5px;
+	top: 2px;
 }
 
 .template-modal .template-header .close-button:hover {
@@ -41,14 +41,14 @@
 }
 
 .template-modal .template-body .button-controls {
-	margin: 5px 0px;
+	margin: 5px 0;
 }
 
 .template-modal .template-body .button-controls button {
 	margin-right: 5px;
 	font-size: 16px;
 	height: 26px;
-	min-width: 80px
+	min-width: 80px;
 }
 
 .template-modal .template-body .error-msg {
