--- a/src/public/js/components/TemplatesList/template_list_preview.css
+++ b/src/public/js/components/TemplatesList/template_list_preview.css
@@ -7,7 +7,7 @@
 	position: fixed;
 	left: 0;
 	top: 0;
-	height: 40px;
+	height: 50px;
 	width: 100%;
 	background: black;
 	z-index: 1;
@@ -28,7 +28,7 @@
 
 .templates-title .templates-header .controlls .controll {
 	height: 28px;
-	margin: 0px 4px;
+	margin: 0 4px;
 }
 
 .templates-body {
