--- a/src/public/js/components/TemplatesList/template_modal.css
+++ b/src/public/js/components/TemplatesList/template_modal.css
@@ -1,6 +1,5 @@
 .template-modal {
 	width: 90%;
-	max-width: 1000px;
 	background: black;
 	padding: 10px;
 	margin: 60px auto 0;
@@ -32,7 +31,7 @@
 }
 
 .template-modal .template-body .textarea-markup {
-	width: 100%;
+	width: 99%;
 	height: 350px;
 	resize: vertical;
 }
@@ -54,4 +53,9 @@
 
 .template-modal .template-body .error-msg .text {
 	color: red;
+}
+
+/* hack the react modal library css */
+.ReactModal__Overlay {
+	z-index: 2;
 }
