Render only visible templates
In order to improve performance when loading large number on templates
on client, we will render only templates that are visible to the user.

--- a/src/public/js/components/TemplatesList/template_list_preview.css
+++ b/src/public/js/components/TemplatesList/template_list_preview.css
@@ -2,6 +2,14 @@
 	border-top: 1px solid #eee;
 }
 
+.templates-item-loading {
+	height: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	font-size: 22px;
+}
+
 .templates .templates-index {
 	padding: 3px 5px;
 	text-align: right;
